tests/snapshots/serde__de_bigint_zero.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\n0n"
---
=== VALUE ===
BigInt(0)

=== HEAP ===
Heap {}

