tests/snapshots/serde__de_biguint64array_empty.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew BigUint64Array()"
---
=== VALUE ===
HeapReference(*1)

=== HEAP ===
Heap {
    0: ArrayBuffer {
        data: [],
        max_byte_length: None,
    },
    1: ArrayBufferView {
        kind: BigUint64Array,
        buffer: *0,
        byte_offset: 0,
        length: 0,
        is_length_tracking: false,
        is_backed_by_rab: false,
    },
}

