tests/snapshots/serde__de_bool_false.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nfalse"
---
=== VALUE ===
Bool(false)

=== HEAP ===
Heap {}

